# Ros2_Ackermann_Hardware_Real_Robot

./: .gitignore  LICENSE  README.md  frames_2026-03-09_14.04.14.gv  frames_2026-03-09_14.19.05.gv  frames_2026-03-09_14.46.03.gv  frames_2026-03-09_16.06.35.gv  frames_2026-03-11_11.13.30.gv
Ros2_ackermann_robot/: frames_2026-02-07_07.13.11.gv
Ros2_ackermann_robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Ros2_ackermann_robot/install/ackermann_description/share/ackermann_description/: package.bash  package.sh  package.zsh
Ros2_ackermann_robot/install/ackermann_gazebo/share/ackermann_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Ros2_ackermann_robot/install/ackermann_hardware/lib/ackermann_hardware/: ackermann_to_vesc  joint_states
Ros2_ackermann_robot/install/ackermann_hardware/share/ackermann_hardware/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Ros2_ackermann_robot/install/ackermann_teleop/lib/ackermann_teleop/: keyboard_teleop
Ros2_ackermann_robot/install/ackermann_teleop/share/ackermann_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Ros2_ackermann_robot/log/: latest_build
Ros2_ackermann_robot/src/ackermann_gazebo/maps/: map.pgm
Ros2_ackermann_robot/src/ackermann_hardware/: setup.cfg  setup.py
Ros2_ackermann_robot/src/ackermann_teleop/: package.xml
src/ackermann_description/: CMakeLists.txt  package.xml
src/ackermann_description/urdf/: gz_ackermann_core.xacro  robot.xacro  vehicle.urdf.xacro
src/ackermann_gazebo/: CMakeLists.txt  package.xml
src/ackermann_gazebo/config/: nav2_params.yaml  ros_gz_bridge.yaml
src/ackermann_gazebo/launch/: robot.launch.py
src/ackermann_gazebo/maps/: map.data  map.yaml
src/ackermann_hardware/: setup.py
src/ackermann_hardware/ackermann_hardware/: ackermann_to_vesc.py  joint_states.py  vesc_to_odom.py
src/ackermann_hardware/config/: rviz_config.rviz
src/ackermann_hardware/launch/: robot.launch.py
src/ackermann_teleop/: setup.py
src/ackermann_teleop/ackermann_teleop/: keyboard_teleop.py
src/ackermann_teleop/config/: joystick.yaml
(+17 files in other folders)
